[metadata]
name = pytest-codeblocks
version = 0.11.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Test code blocks in your READMEs
url = https://github.com/nschloe/pytest-codeblocks
project_urls =
    Code=https://github.com/nschloe/pytest-codeblocks
    Issues=https://github.com/nschloe/pytest-codeblocks/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
install_requires =
    dataclasses;python_version<"3.7"
    pytest >=6
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
pytest11 =
    codeblocks = pytest_codeblocks.plugin
